--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
 	    "angular-animate": "~1.2.0",
     	"angular-touch": "~1.2.0",
 	    "es5-shim": "~4.0.5",
-			"artyom":"0.9.1"
+			"artyom.js": "*"
 	},
 	  	"devDependencies": {
 	    "angular-mocks": "~1.2.0",
