--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-touch": "~1.2.0",
     "es5-shim": "~4.0.5",
     "artyom.js": "*",
-    "jPlayer": "jplayer#^2.9.2"
+    "jPlayer": "jplayer#^2.9.2",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
