--- a/.jshintrc
+++ b/.jshintrc
@@ -18,6 +18,11 @@
   "trailing": true,
   "smarttabs": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "artyom": false,
+    "jPlayerPlaylist": false,
+    "$": false,
+    "jQuery": false
+
   }
 }
